2010-04-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* ModuleBuilder.cs: Implement ModuleVersionId.

2010-04-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* ModuleBuilder.cs: Implement ResolveType.

2010-04-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* ModuleBuilder.cs: Implement GetMethodImpl.

2010-04-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* ModuleBuilder.cs (DefineType): Raise the correct exception
	when name is null.

2010-04-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* ModuleBuilder.cs: Implement IsResource.

2010-04-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* ModuleBuilder.cs: Implement ScopedName property.

2010-04-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* ModuleBuilder.cs: Implement Name property.

2010-03-31 Rodrigo Kumpera  <rkumpera@novell.com>

	* ModuleBuilder.cs: Implement Assembly property.

2010-04-01  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilder.cs (GetField): Avoid a crash if this is called on a
	FieldOnTypeBuilderInst. Fixes #586944.

2010-03-30  Zoltan Varga  <vargaz@gmail.com>

	* ModuleBuilder.cs (DefinedType): Lookup inside the name_cache before creating
	the TypeBuilder since the runtime code can't handle a duplicate type name.

2010-03-30  Zoltan Varga  <vargaz@gmail.com>

	* CustomAttributeType.cs (IsValidType): Implement proper checking for value types
	as well.

2010-03-30  Zoltan Varga  <vargaz@gmail.com>

	* CustomAttributeBuilder.cs: Fix the calls to IsValidType, some were passing
	in DeclaringType instead of PropertyType/FieldType.

	* CustomAttributeType.cs (IsValidType): Implement proper checking for reference
	types. Fixes #591788.

2010-03-30  Zoltan Varga  <vargaz@gmail.com>

	* CustomAttributeBuilder.cs (IsValidType): Call Enum.GetUnderlyingType () for
	dynamic enums to avoid crashes in the unmanaged code. Fixes #591800.

2010-03-26 Rodrigo Kumpera  <rkumpera@novell.com>

	* AssemblyBuilder.cs: Add IsDynamic.

2010-03-26 Rodrigo Kumpera  <rkumpera@novell.com>
